<resources>
    <string name="app_name">HelloWorld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="name">Name</string>
    <string name="mob">Mobile Number</string>
    <string name="pwd">Password</string>
    <string name="cpwd">Confirm Password</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>

    <string name="sendOtp">OTP</string>
    <string name="verify">Verify</string>

    <string name="back_button">Back Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="add_image">Add Image</string>

    <string name="menu_chats">Chats</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_chat_without_internet">Chat without Internet</string>
    <string name="menu_spammers">Spammers</string>
    <string name="menu_about_helloworld">About HelloWorld</string>
    <string name="menu_logout">Logout</string>

    <string name="info_chat_without_internet">HelloWorld helps you to chat without the internet access.</string>
    <string name="ip_address">IP Address</string>
    <string name="join_as_client">Join as Client</string>
    <string name="host">Host</string>

    <string name="spammer_button">Spammer Button</string>
    <string name="user_profile_img">User Profile Image</string>
    <string name="no_chats_msg">No Chats to show!</string>
    <string name="no_chats_info">Tap the menu button to view Contacts and for more options.</string>

    <string name="messenger">HelloWorld Messenger</string>
    <string name="developer">Developers: Ayushkumar Jitendra Saurabh</string>
    <string name="about_info1">
        1. HelloWorld Messenger helps you connect with your closed ones and business acquaintances.\n
        2. It is an efficient and easy-to-use Android Chat application.\n
        3. This application is created using Java for Android app and PHP, MySQL for the server.\n
        4. Firebase Authentication is used to verify phone number.\n
        5. User will be able to login simultaneously on multiple Android devices.\n
        6. Since, all the attachments &amp; chats of the user are stored in server, user do not have to worry about taking backups.\n
        7. User can chat as well as can share large sized files with each other without the internet connectivity &amp; data charges.\n
        8. User can separate the spammers from normal chats i.e., Chats which are stated as Spammers by the user will not be populated along with the normal chats.\n
        9. User can edit the sent message as long as the recipient has not seen it.\n
        10. Groups can also be viewed separately. So, the user is able to manage &amp; see all the groups together.
    </string>
    <string name="about_info2">GitHub Repository Link:</string>
    <string name="about_info3">https://github.com/ayushskmaurya/BE-Final-Year-Project</string>

    <string name="edit_message">Edit Message</string>
    <string name="attached_file">Attached File</string>
    <string name="cancel_uploading_file">Cancel Uploading File</string>
    <string name="download_file">Download File</string>
    <string name="read_receipt">Read Receipt</string>
    <string name="message">Message</string>
    <string name="new_message">New Message</string>
    <string name="attach_file">Attach File</string>
    <string name="send_message">Send Message</string>

    <string name="caption">Caption</string>
    <string name="send_file">Send File</string>

    <string name="group_name">Group Name</string>
    <string name="add_members">Add Members</string>
    <string name="create_group">Create Group</string>
</resources>