<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chats">

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.messengerhelloworld.helloworld.ui.ChatsFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.messengerhelloworld.helloworld.ui.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.messengerhelloworld.helloworld.ui.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_chat_without_internet"
        android:name="com.messengerhelloworld.helloworld.ui.ChatWithoutInternetFragment"
        android:label="@string/menu_chat_without_internet"
        tools:layout="@layout/fragment_chat_without_internet" />

    <fragment
        android:id="@+id/nav_spammers"
        android:name="com.messengerhelloworld.helloworld.ui.SpammersFragment"
        android:label="@string/menu_spammers"
        tools:layout="@layout/fragment_spammers" />

    <fragment
        android:id="@+id/nav_about_helloworld"
        android:name="com.messengerhelloworld.helloworld.ui.AboutHelloworldFragment"
        android:label="@string/menu_about_helloworld"
        tools:layout="@layout/fragment_about_helloworld" />
</navigation>