<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ChatWithoutInternetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="-45dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logo_fragmentChatWithoutInternet"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/icon_fragmentChatWithoutInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_chat_without_internet"
            android:src="@drawable/menu_icon_chat_without_internet"
            app:layout_constraintBottom_toTopOf="@+id/info_fragmentChatWithoutInternet"
            app:layout_constraintStart_toEndOf="@+id/logo_fragmentChatWithoutInternet" />

        <TextView
            android:id="@+id/info_fragmentChatWithoutInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/info_chat_without_internet"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_fragmentChatWithoutInternet" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hostButton_fragmentChatWithoutInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey1"
            android:text="@string/host"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/clientButton_fragmentChatWithoutInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color1"
            android:text="@string/client"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</FrameLayout>