<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ChatsFragment">

    <LinearLayout
        android:id="@+id/chatsLayout_fragmentChats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_fragmentChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/color1"
            android:padding="10dp"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/backButton_fragmentChats"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/color1"
                android:contentDescription="@string/back_button"
                android:src="@drawable/icon_back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/spammerButton_fragmentChats"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/color1"
                android:contentDescription="@string/spammer_button"
                android:src="@drawable/icon_spammer_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar_fragmentChats"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:indeterminate="true"
            android:indeterminateTint="@color/color1"
            android:indeterminateTintMode="src_atop" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chats_fragmentChats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noChats_fragmentChats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/noChatsMsg_fragmentChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_chats_msg"
            android:textColor="@color/black1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/noChatsInfo_fragmentChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_chats_info"
            android:textColor="@color/black1"
            android:textSize="14sp" />
    </LinearLayout>
</FrameLayout>